# uvextras

./: README.md  install.sh  pyproject.toml  uvextras.yaml
.uvextras/: uvextras.yaml
scripts/: clean.py  create.py  gitignore.py
uvextras/: __init__.py  __main__.py  cli.py  config.py  context.py  shell.py  stylize.py  test_config.py  uvextras.yaml
uvextras/commands/: info.py  init.py  list.py  run.py  type.py
uvextras/scripts/: clean.py  create.py  enable-dev.py  envclean.py
