[project]
name = "uvextras"
version = "0.1.0"
description = "Extra _custom_ features for `uv`"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "rich>=14.0.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "flake8>=7.3.0",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "tox>=4.27.0",
    "types-pyyaml>=6.0.12.20250516",
]
