[project]
name = "uvextras"
version = "0.1.0"
description = "Extra _custom_ features for `uv`"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "rich>=14.0.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "tox>=4.27.0",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.isort]
multi_line_output = 3

[tool.pyright]
typeCheckingMode = "off"
ignore = ["*"]

[tool.ruff]
extend = "${XDG_CONFIG_HOME}/ruff/pyproject.toml"
